third_party/move/move-compiler-v2/tests/reference-safety/freeze.exp

Diagnostics:
warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   ┌─ tests/reference-safety/freeze.move:18:26
   │
18 │         ref_mut_mut(r, r); // error
   │                          ^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   ┌─ tests/reference-safety/freeze.move:24:26
   │
24 │         ref_imm_mut(r, r); // error
   │                          ^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   ┌─ tests/reference-safety/freeze.move:30:26
   │
30 │         ref_imm_imm(r, r); // ok
   │                          ^


Diagnostics:
error: same mutable reference in local `r` is used again in argument list
   ┌─ tests/reference-safety/freeze.move:18:9
   │
18 │         ref_mut_mut(r, r); // error
   │         ^^^^^^^^^^^^^^^^^ requirement enforced here

error: mutable reference in local `r` requires exclusive access but is borrowed
   ┌─ tests/reference-safety/freeze.move:24:9
   │
24 │         ref_imm_mut(r, r); // error
   │         ^^^^^^^^^^^^^^^^^
   │         │           │
   │         │           previous freeze
   │         requirement enforced here
